Changelog for Version 17.0:
FIx CWIR crashing with large .tmp values.
Add support for custom melting point to CWIR.
Fix some minor LITH reactions.



 