@@ -29,7 +29,7 @@ void Element::Element_ECLR()
 	Weight = 100;
 
 	HeatConduct = 0;
-	Description = "Electronic eraser, clears surrounding when sparked with PSCN & NSCN. Use .tmp to set radius. Read wiki!";
+	Description = "Electronic eraser, clears surrounding when sparked. Use with PSCN & NSCN. Use .tmp to set radius.";
 
 	Properties = TYPE_SOLID;
 
@@ -48,34 +48,28 @@ void Element::Element_ECLR()
 
 static int update(UPDATE_FUNC_ARGS)
 {
-	int range = parts[i].tmp;
-	if (parts [i].tmp > 100|| parts[i].tmp < 0)
+	int range = parts[i].tmp, r;
+	if (parts [i].tmp > 200|| parts[i].tmp < 0)
 		parts[i].tmp = 10;
-	if (parts[i].life > 0)
-		parts[i].life--;
 
 	for (int rx = -range; rx < range + 1; rx++)
 		for (int ry = -range; ry < range + 1; ry++)
 			if (x + rx >= 0 && y + ry >= 0 && x + rx < XRES && y + ry < YRES && (rx || ry))
 			{
-				int r = pmap[y + ry][x + rx];
+				 r = pmap[y + ry][x + rx];
 				if (!r)
 					r = sim->photons[y + ry][x + rx];
 				if (!r)
 					continue;
-				if (parts[i].life > 0 && parts[i].life < 14 && parts[ID(r)].type != PT_PSCN && parts[ID(r)].type != PT_WIFI && parts[ID(r)].ctype != PT_PSCN)
+			
+				if (parts[i].life == 10 && parts[ID(r)].type != PT_SPRK && parts[ID(r)].type != PT_PSCN && parts[ID(r)].type != PT_NSCN)
 				{
 					sim->kill_part(ID(r));
-					continue;
+				
 				}
-				else if  (parts[i].life >= 14 )
-				{
-					sim->kill_part(i);
-					sim->kill_part(ID(r));
-					continue;
-				}
+				continue;
 			}
-	return 0;
+	return 0; 
 }
 
 static int graphics(GRAPHICS_FUNC_ARGS)
@@ -85,13 +79,6 @@ static int graphics(GRAPHICS_FUNC_ARGS)
 		*colr = 255;
 		*colg = 0;
 		*colb = 0;
-		*pixel_mode |= PMODE_LFLARE;
-	}
-
-	if (cpart->life > 15)
-	{	*colr = 0;
-		*colg = 0;
-		*colb = 255;
 		*pixel_mode |= PMODE_LFLARE;
 	}
 		return 0;
