@@ -249,19 +249,10 @@ static int update(UPDATE_FUNC_ARGS)
 					}
 					if (sender == PT_NSCN)
 					{
-						parts[ID(r)].life = 20;
+						parts[ID(r)].life = 0;
 					}
 				}
 					continue;
-				case PT_PROJ:
-				{
-					if (sender == PT_PSCN)
-					{
-						parts[ID(r)].life = 10;
-					}
-					
-				}
-				continue;
 				case PT_LED:
 					if (parts[i].life < 4)
 					{
